# CubeRecon

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  cubeERepTranslate.cxx  cubeMakeHits3D.cxx  cubeRecon.cxx  cubeStrip.cxx  testCC0Pi.cxx  testCC0PiTimes.cxx  testCCInc.cxx  testECalEff.cxx  testHitTiming.cxx  testRawHits.cxx  testTrackEff.cxx  testTrackTiming.cxx  testVertexResolution.cxx
display/: CMakeLists.txt  TEventChangeManager.cxx  TEventDisplay.cxx  TFindResultsHandler.cxx  TFitChangeHandler.cxx  TG4HitChangeHandler.cxx  TGUIManager.cxx  TGUIManager.hxx  THitChangeHandler.cxx  TReconClusterElement.cxx  TReconTrackElement.cxx  TShowHits.cxx  TTrajectoryChangeHandler.cxx
example/: CMakeLists.txt
io/: CMakeLists.txt  CubeAlgorithmResult.cxx  CubeEvent.hxx  CubeG4Hit.cxx  CubeG4Trajectory.hxx  CubeHit.cxx  CubeHit.hxx  CubeInfo.cxx  CubeInfo.hxx  CubeReconCluster.cxx  CubeReconObject.cxx  CubeReconObject.hxx  CubeReconTrack.cxx  CubeReconVertex.cxx  CubeRecurseGeometry.hxx
src/: CMakeLists.txt  CubeBuildPairwiseVertices.cxx  CubeBuildPairwiseVertices.hxx  CubeCleanHits.cxx  CubeClusterHits.cxx  CubeCompareReconObjects.hxx  CubeCreateTrack.hxx  CubeERepSim.cxx  CubeFindKinks.cxx  CubeFindKinks.hxx  CubeGrowClusters.cxx  CubeGrowTracks.cxx  CubeHits3D.cxx  CubeHits3D.hxx  CubeMakeHits3D.cxx  CubeMakeUsed.cxx  CubeMergeXTalk.cxx  CubeRecon.cxx  CubeSpanningTree.cxx  CubeStochTrackFit.cxx  CubeTimeSlice.cxx  CubeTreeRecon.cxx  CubeVertexFit.cxx  TTmplDensityCluster.hxx  TTmplMinimalSpanningTree.hxx
tools/: CMakeLists.txt  ToolContained.cxx  ToolContained.hxx  ToolCubeTruth.hxx  ToolG4Hits.cxx  ToolG4Hits.hxx  ToolInitialize.cxx  ToolInitialize.hxx  ToolInternal.hxx  ToolMainTrajectory.cxx  ToolMainTrajectory.hxx  ToolPrimaryId.cxx  ToolPrimaryId.hxx  ToolRecon.cxx  ToolRecon.hxx
validate/: cube-recon-validate.sh
